[gd_scene load_steps=5 format=3 uid="uid://bpn5dtoyqv8uv"]

[ext_resource type="Texture2D" uid="uid://bjd81ne80g4u" path="res://icon.svg" id="1_ar2rp"]
[ext_resource type="Script" uid="uid://b584mbyu77rgx" path="res://scripts/word.gd" id="1_ve73v"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sdpmc"]
size = Vector2(124, 36)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_ve73v"]
blend_mode = 2

[node name="word" type="Node2D"]
script = ExtResource("1_ve73v")

[node name="fridge_magnet" type="Area2D" parent="."]
z_index = 1
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="fridge_magnet"]
shape = SubResource("RectangleShape2D_sdpmc")

[node name="name" type="RichTextLabel" parent="."]
z_index = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -57.0
offset_top = -16.0
offset_right = 58.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 18
text = "couch"
fit_content = true
scroll_active = false
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="sprite" type="Sprite2D" parent="."]
material = SubResource("CanvasItemMaterial_ve73v")
position = Vector2(-5.96046e-08, -7.56979e-06)
scale = Vector2(1, 0.320313)
texture = ExtResource("1_ar2rp")

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0

[connection signal="mouse_entered" from="fridge_magnet" to="." method="_on_fridge_magnet_mouse_entered"]
[connection signal="mouse_exited" from="fridge_magnet" to="." method="_on_fridge_magnet_mouse_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
